// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusIndicator should be rendered correctly 1`] = `
<div
  className="root size-24 uui-status_indicator uui-color-neutral fill-contrast"
/>
`;

exports[`StatusIndicator should be rendered correctly with props 1`] = `
<div
  className="root size-12 uui-status_indicator uui-color-info fill-outline"
/>
`;
